--- a/Arcsecond.xcodeproj/xcshareddata/xcschemes/Arcsecond macOS.xcscheme
+++ b/Arcsecond.xcodeproj/xcshareddata/xcschemes/Arcsecond macOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9F0762A01D09F1BC00BEE18E"
-               BuildableName = "Arcsecond Demo macOS.app"
-               BlueprintName = "Arcsecond Demo macOS"
-               ReferencedContainer = "container:arcsecond.xcodeproj">
+               BlueprintIdentifier = "9FBFE2621B79D12B00E98B40"
+               BuildableName = "Arcsecond.framework"
+               BlueprintName = "Arcsecond macOS"
+               ReferencedContainer = "container:Arcsecond.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -28,14 +28,24 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9FBFE26D1B79D12B00E98B40"
+               BuildableName = "ArcsecondTests.xctest"
+               BlueprintName = "ArcsecondTests"
+               ReferencedContainer = "container:Arcsecond.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F0762A01D09F1BC00BEE18E"
-            BuildableName = "Arcsecond Demo macOS.app"
-            BlueprintName = "Arcsecond Demo macOS"
-            ReferencedContainer = "container:arcsecond.xcodeproj">
+            BlueprintIdentifier = "9FBFE2621B79D12B00E98B40"
+            BuildableName = "Arcsecond.framework"
+            BlueprintName = "Arcsecond macOS"
+            ReferencedContainer = "container:Arcsecond.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -51,16 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F0762A01D09F1BC00BEE18E"
-            BuildableName = "Arcsecond Demo macOS.app"
-            BlueprintName = "Arcsecond Demo macOS"
-            ReferencedContainer = "container:arcsecond.xcodeproj">
+            BlueprintIdentifier = "9FBFE2621B79D12B00E98B40"
+            BuildableName = "Arcsecond.framework"
+            BlueprintName = "Arcsecond macOS"
+            ReferencedContainer = "container:Arcsecond.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -70,16 +79,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "9F0762A01D09F1BC00BEE18E"
-            BuildableName = "Arcsecond Demo macOS.app"
-            BlueprintName = "Arcsecond Demo macOS"
-            ReferencedContainer = "container:arcsecond.xcodeproj">
+            BlueprintIdentifier = "9FBFE2621B79D12B00E98B40"
+            BuildableName = "Arcsecond.framework"
+            BlueprintName = "Arcsecond macOS"
+            ReferencedContainer = "container:Arcsecond.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
